@@ -4123,7 +4123,7 @@ void convert_inbox_to_uppercase(char *name)
 int db_getmailbox_list_result(u64_t mailbox_idnr, u64_t user_idnr, mailbox_t * mb)
 {
 	/* query mailbox for LIST results */
-	char *mbxname, *name;
+	char *mbxname, *name, *escaped_name;
 	GString *fqname;
 	int i=0;
 
@@ -4159,12 +4159,16 @@ int db_getmailbox_list_result(u64_t mailbox_idnr, u64_t user_idnr, mailbox_t * m
 	mb->no_inferiors=db_get_result_bool(0,i++);
 	db_free_result();
 	
+	escaped_named = dm_stresc(name);
+
 	/* no_children */
 	snprintf(query, DEF_QUERYSIZE,
 			"SELECT COUNT(*) AS nr_children "
 			"FROM %smailboxes WHERE owner_idnr = '%llu' "
 			"AND name LIKE '%s%s%%' ",
-			DBPFX, user_idnr, name, MAILBOX_SEPARATOR);
+			DBPFX, user_idnr, escaped_name, MAILBOX_SEPARATOR);
+	dm_free(escaped_name);
+	g_free(name);
 	
 	if (db_query(query) == -1) {
 		trace(TRACE_ERROR, "%s,%s: db error", __FILE__, __func__);
@@ -4172,7 +4176,6 @@ int db_getmailbox_list_result(u64_t mailbox_idnr, u64_t user_idnr, mailbox_t * m
 	}
 	mb->no_children=db_get_result_u64(0,0)?0:1;
 	
-	g_free(name);
 	db_free_result();
 	return DM_SUCCESS;
 }
