@@ -1,3 +1,8 @@
+2006-03-15  Aaron Stone  <aaron@serendipity.cx>
+
+	* db.c:
+	Adapted mailbox escaping patch from 2.0 series, bug #314.
+
 2006-03-11  Paul J Stevens <paul@nfg.nl>
 
 	* ChangeLog, configure.in, dbmail.h.in:
